<resources>
    <string name="app_name">Bukkit Helper</string>
    <string name="title_home">Home</string>
    <string name="title_console">Console</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_no_connection">No server is connected</string>
    <string name="title_clock_late">Your Clock is Late</string>
    <string name="text_clock_late">"Make sure the difference between clock of your device and the one of the server is
        less than half a minute.\n "
    </string>
    <string name="action_connect">Connect</string>
    <string name="title_nickname">Nickname</string>
    <string name="text_server_add">This operation will add a network-based server into list of the app.</string>
    <string name="title_address">Address</string>
    <string name="title_key">Key</string>
    <string name="action_add">Add</string>
    <string name="action_create">Create</string>
    <string name="title_connect_to_server">Connect to Server</string>
    <string name="title_new_key">New Key</string>
    <string name="title_edit_key">Edit Key</string>
    <string name="title_key_content">Key Content</string>
    <string name="action_done">Done</string>
    <string name="text_content_empty">Content is empty</string>
    <string name="text_content_not_key">Content doesn\'t represent a key</string>
    <string name="text_key_exists">Key already exits</string>
    <string name="text_server_exists">Server of this address already exists</string>
    <string name="text_invalidate_address">This Internet address is invalidate</string>
    <string name="text_key_not_exists">This key doesn\'t exist</string>
    <string name="text_connection_failed">Connection failed</string>
    <string name="action_force_add">Force Add</string>
    <string name="text_wrong_key">This key is not registered in server</string>
    <string name="title_server_connected">Server Connected</string>
    <string name="text_connected_to">Connected to %s. Tap to change.</string>
    <string name="title_tps">Ticks Per Second</string>
    <string name="title_connecting_to_server">Connecting to Server</string>
    <string name="title_tick">Tick</string>
    <string name="title_unit_s">%ss</string>
    <string name="title_server_monitor">Server Monitor</string>
    <string name="title_player_count">Player Count</string>
    <string name="title_player_monitor">Player Monitor</string>
    <string name="text_player_monitor">Count online players.</string>
    <string name="title_server_selection">Select Server</string>
    <string name="title_latency">%sms behind</string>
    <string name="text_latency_test_failed">Failed to test latency: %s: %s.</string>
    <string name="text_latency_testing">Testing latency…</string>
    <string name="title_add_server">Add Server</string>
    <string name="text_connection_timeout">Connection timeout</string>
    <string name="title_undo">Undo</string>
    <string name="text_deleted">Deleted %s</string>
    <string name="text_tps">Calculate and count server\'s TPS.</string>
    <string name="text_no_description">No description provided.</string>
    <string name="title_settings">Settings</string>
    <string name="action_open">Open</string>
    <item name="text_edit_tag_last_primary_watcher" type="id"/>
    <item name="text_edit_tag_last_secondary_watcher" type="id"/>
</resources>