<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.zhufucdev.bukkithelper.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_navigation_home_to_serverConnectFragment"
                app:destination="@id/serverConnectFragment" app:enterAnim="@anim/fragment_open_enter"
                app:exitAnim="@anim/fragment_open_exit" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.zhufucdev.bukkithelper.ui.console.ConsoleFragment"
            android:label="@string/title_console"
            tools:layout="@layout/fragment_console"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.zhufucdev.bukkithelper.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications"/>
    <fragment android:id="@+id/serverConnectFragment"
              android:name="com.zhufucdev.bukkithelper.ui.connect.ServerConnectFragment"
              android:label="@string/title_connect_to_server" tools:layout="@layout/fragment_server_connect">
        <action android:id="@+id/action_serverConnectFragment_to_keyEditFragment"
                app:destination="@id/keyEditFragment" app:enterAnim="@anim/fragment_open_enter"
                app:exitAnim="@anim/fragment_open_exit" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <argument android:name="keyName" app:argType="string"/>
        <argument android:name="content" app:argType="string"/>
        <action android:id="@+id/action_serverConnectFragment_to_clockLateFragment"
                app:destination="@id/clockLateFragment" app:enterAnim="@anim/fragment_fade_enter"
                app:exitAnim="@anim/fragment_fade_exit" app:popEnterAnim="@anim/nav_default_enter_anim"
                app:popExitAnim="@anim/nav_default_exit_anim"/>
    </fragment>
    <fragment android:id="@+id/keyEditFragment" android:name="com.zhufucdev.bukkithelper.ui.key.KeyEditFragment"
              android:label="@string/title_edit_key" tools:layout="@layout/fragment_key_edit"/>
    <fragment android:id="@+id/clockLateFragment"
              android:name="com.zhufucdev.bukkithelper.ui.clock_late.ClockLateFragment"
              android:label="@string/title_clock_late"/>
</navigation>