<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/rootContainer_padding"
        tools:context=".ui.home.HomeFragment">


    <com.zhufucdev.bukkithelper.view.ServerNotConnectedIcon
            android:id="@+id/icon_no_connection"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.zhufucdev.bukkithelper.view.ServerConnectingIcon
            android:id="@+id/icon_connecting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
            android:id="@+id/scroll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_server_connected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="4dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent" android:layout_height="match_parent"
                        android:padding="@dimen/cardContainer_padding">
                    <TextView android:id="@+id/text_connect_title"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/title_server_connected"
                              android:textSize="@dimen/text_title_size"
                              android:textColor="?attr/colorOnPrimary"
                              app:layout_constraintTop_toTopOf="parent"
                              app:layout_constraintStart_toStartOf="parent"/>
                    <TextView android:id="@+id/text_connect_content"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/text_connected_to"
                              android:textColor="?attr/colorOnPrimarySurface"
                              app:layout_constraintTop_toBottomOf="@id/text_connect_title"
                              app:layout_constraintStart_toStartOf="parent"/>
                    <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
                            app:tint="?attr/colorOnPrimary"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/widget_margin_normal"
                      android:text="@string/title_server_monitor"
                      android:textColor="?attr/colorOnSurface"
                      android:textSize="20sp"/>
            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart_tps"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_size_normal"
                    android:layout_margin="@dimen/widget_margin_normal"/>
            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart_players"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_size_normal"
                    android:layout_margin="@dimen/widget_margin_normal"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>